- change layout of molecule counts display?
- disable liquid and water sliders when beaker is full?

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- javadoc


DONE:
7/2/08 - sort liquids by decreasing pH in liquid combo box
7/2/08 - use on color for all of the liquids that don't have an assigned color
******* version 0.00.07 (22914)
7/2/08 - add water to list of liquids
7/2/08 - flesh out the list of liquids
7/2/08 - setOpaque(false) for PSwing JComponents
7/2/08 - fix problem with Random particle coordinate generation reported by Kathy
7/1/08 - keep constant power of ten 10^25 on H2O molecule count
7/1/08 - restructure bar graph code in preparation for flashing out this feature
7/1/08 - make molecules in count view the same size as molecules in legend
7/1/08 - adjust layout of molecules legend
7/1/08 - javadoc everything done up to this point
7/1/08 - put a translucent background behind molecule counts
******* version 0.00.06 (22824)
6/30/08 - add developer only display of particle counts, in lower left of beaker
6/30/08 - add property for min # particles of minority species, with developer control
6/30/08 - add developer control for # particles at pH=7
6/30/08 - add developer control for majority & minority species transparency
6/30/08 - use separate transparency for majority and minority species of particles
6/30/08 - use my algorithm for linear # particles to create outside pH range 6-8
6/30/08 - use Laurie's algorithm for # particles to create in pH range 6-8
******* version 0.00.05 (22811)
6/30/08 - connect particle developer control panel to ParticlesNode
6/30/08 - fix: liquid and water sliders are stuck "on" when beaker is full
6/30/08 - hook up Ratio check box
6/30/08 - port prototype code for particles to this sim